--- a/index.html
+++ b/index.html
@@ -10,5 +10,27 @@
 		<p>
 		le fr&egrave;re de mère
 		</p>
+		<div>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit<strong> anim id est laborum.</strong>
+		</div>
+			<div>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit<strong> anim id est laborum.</strong>
+			</div>
+		<h1>Michel lamere</h1>
+			<p>
+			Le petit chat est mort<br>
+
+			<u>Bien</u> <i>FAIT POUR </i> <em>sa </em>geule
+			</p>
 	</body>
-</html>
+	</html>
