Test des tableau

--- a/index.html
+++ b/index.html
@@ -32,5 +32,27 @@
 
 			<u>Bien</u> <i>FAIT POUR </i> <em>sa </em>geule
 			</p>
+			<table>
+				<thead>
+					<tr>
+						<th>nom</th>
+						<th>prenom</th>
+						<th>email</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+					<td>vincent</td>
+					<td>dubeaurepaire</td>
+					<td>dubeaurepaire.v@gmail.com</td>
+					</tr>
+					<tr>
+					<tr>
+					<td>vincent</td>
+					<td>dubeaurepaire</td>
+					<td>dubeaurepaire.v@gmail.com</td>
+					</tr>
+				</tbody>
+			</table>
 	</body>
 	</html>
