--- a/index.html
+++ b/index.html
@@ -40,7 +40,57 @@
 						<th>email</th>
 					</tr>
 				</thead>
-				<tbody>
+				<body>
+				<img src="images/chatmu.jpg" alt="Petit chat" height="150" title="the cat">
+						<form action="#" method="POST">
+						<legend>Formulaire de saisie</legend>
+						<div>
+						<label for="nom">Nom</label>
+						<input type="text" name="" id="nom">
+						</div>
+						<div>
+						<label for="password">Password</label>
+						<input type="password" name="">
+						</div>
+						<div>
+						<label for="range">Range</label>
+						<input type="range">
+						</div>
+						<div>
+						<label color</label>
+						<input type="color" name="">
+						</div>
+						<div>
+						<label url</label>
+						<input type="url" name="">
+						</div>
+						<div>
+						<label> date</label>
+						<input type="date" name="">
+						</div>
+						<div>
+						<label> email</label>
+						<input type="email" name="">
+						</div>
+						<div>
+						<label>textarea</label>
+						<textarea></textarea>
+						</div>
+						<div>
+						<label>RADIO</label>
+						Male<input type="RADIO" name="SEX">
+						Female<input type="RADIO" name="sex">
+						Other<input type="RADIO" name="sex">
+						</div>
+						<div>
+							<label>Checkbox</label>
+							OUi<input type="checkbox" name="yes">
+							Nom<input type="checkbox" name="no">
+						</div>
+						
+
+					</form>
+					<hr>
 					<tr>
 					<td>vincent</td>
 					<td>dubeaurepaire</td>
@@ -52,7 +102,14 @@
 					<td>dubeaurepaire</td>
 					<td>dubeaurepaire.v@gmail.com</td>
 					</tr>
-				</tbody>
+					<ul>
+						<li>khalid sookia</li>
+						<li>ABS Clément</li>
+					</ul>
+					<ol>
+						<li>vincent letourneau</li>
+						<li>abs clement</li>
+				</body>
 			</table>
 	</body>
 	</html>
