--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
 						</div>
 						<div>
 							<label>Checkbox</label>
-							OUi<input type="checkbox" name="yes">
+							Oui<input type="checkbox" name="yes">
 							Nom<input type="checkbox" name="no">
+							Peutetre<input type="checkbox" name="peutetre">
 						</div>
 						
 
