Test formulaire fin 31 052016

--- a/index.html
+++ b/index.html
@@ -86,10 +86,8 @@
 							<label>Checkbox</label>
 							Oui<input type="checkbox" name="yes">
 							Nom<input type="checkbox" name="no">
-							Peutetre<input type="checkbox" name="peutetre">
-						</div>
-						
-
+							Peut être<input type="checkbox" name="maybe">
+						</div>					
 					</form>
 					<hr>
 					<tr>
